--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,6 +7,15 @@
   padding: 0;
   margin: 0;
 }
-body {
-  background-color: #ffffff;
+html,
+body,
+#__next,
+.h-full,
+.w-full {
+  background-color: #000;
+  color: #fff;
+  height: 100%;
+  width: 100%;
+  margin: 0;
+  padding: 0;
 }
